<resources>
    <string name="app_name">生活小助手</string>
    <string name="get_str">get请求</string>
    <string name="post_str">post请求</string>
    <string name="permission_str">6.0权限申请使用</string>
    <string name="signle_permission">单个权限申请</string>
    <string name="more_permission">多个权限申请</string>
    <string name="splash_str">生活小助手</string>
    <string name="copyright_str">copyright@zhang</string>
    <string name="share_app">分享给朋友</string>
    <string name="about">关于</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="tag_tit_str">选择你感兴起的话题</string>
    <string name="login_str">登录</string>
    <string name="regist_str">注册</string>
    <string name="tag_next_btn_str">选好了，进入首页</string>
    <string name="homs_str">首页</string>
    <string name="geren_str">个人</string>
    <string name="wendajia">发现</string>
    <string name="load_failed">加载失败，点击重试</string>
    <string name="small_tit_tv">无需注册、直接进入</string>
    <string name="hy_str">欢迎使用..新功能即将开放</string>
    <string name="explame_str">2017-08-25 20:35</string>
    <string name="explametitle_str"><![CDATA[分享 不得不备的家居好物盘点－把ins风装进家]]></string>
    <string name="nickname_str">昵称</string>
    <string name="nickname_str_mh">昵&#160;称:</string>
    <string name="collect_str">收藏</string>
    <string name="setting_str">设置</string>
    <string name="photo_str">相册</string>
    <string name="leib_name_str">按菜品选择菜谱</string>
    <string name="more_str">更多</string>
    <string name="netloading_str">正在加载中......</string>
    <string name="loading_dialog_str">加载中......</string>
    <string name="life_zwsj">暂无数据</string>
    <string name="life_empty">空的空的......</string>
    <string name="zwwl">加载失败，请点击重新加载</string>
    <string name="again_reload">重新加载</string>
    <string name="out_login_str">退出登录</string>
    <string name="fature_five_wearther_str">未来五天预测天气</string>
    <string name="setting_title_str">设置</string>
    <string name="nickname_hint_str">输入昵称,让大家记住你......</string>
    <string name="phonenum_str">手机号:</string>
    <string name="phonenum_hint_str">输入有效的手机号(非必填)</string>
    <string name="verificationcode_str">验证码:</string>
    <string name="pwd_str">密&#160;&#160;码:&#160;</string>
    <string name="pwd_hint_str">6&#8211;16位字母数字</string>
    <string name="sure_pwd_str">确认密码:</string>
    <string name="sure_pwd_hint_str">再次输入密码</string>
    <!---->
    <string name="refresh_pull_down_text">下拉推荐</string>
    <string name="refresh_release_text">松开推荐</string>
    <string name="refresh_ing_text">推荐中</string>
    <string name="search_id_str">搜索</string>
    <string name="query_id_ed_hint_str">请输入身份证号查询</string>
    <string name="sure_register_btn_str">确定注册</string>
    <string name="disc_no_register_tip_tv_str">未授权! 点击注册</string>
    <string name="login_account_hint_str">请输入账号</string>
    <string name="login_psw_hint_str">请输入密码</string>
    <!---->
</resources>
