<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50">

        <ImageView
            android:id="@+id/register_back_img"
            android:layout_width="@dimen/dp_50"
            android:layout_height="@dimen/dp_50"
            android:contentDescription="@null"
            android:padding="@dimen/dp_10"
            android:src="@mipmap/back_blue_icon" />

        <TextView
            style="@style/warp_size17"
            android:layout_gravity="center"
            android:text="@string/regist_str"
            android:textColor="@color/title_color" />
    </FrameLayout>

    <LinearLayout style="@style/comm_registapp_ll_style">

        <TextView
            style="@style/warp_size15"
            android:text="@string/nickname_str_mh" />

        <EditText
            android:id="@+id/register_nickname_edit"
            style="@style/warp_size15"
            android:layout_height="@dimen/dp_40"
            android:layout_marginLeft="@dimen/dp_5"
            android:layout_marginRight="@dimen/dp_5"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/nickname_hint_str"
            android:inputType="text"
            android:textSize="@dimen/sp_13" />

    </LinearLayout>


    <LinearLayout style="@style/comm_registapp_ll_style">

        <TextView
            style="@style/warp_size15"
            android:text="@string/phonenum_str" />

        <EditText
            android:id="@+id/register_phonenum_edit"
            style="@style/warp_size15"
            android:layout_height="@dimen/dp_40"
            android:layout_marginLeft="@dimen/dp_5"
            android:layout_marginRight="@dimen/dp_5"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/phonenum_hint_str"
            android:inputType="number"
            android:textSize="@dimen/sp_13" />

    </LinearLayout>

    <LinearLayout style="@style/comm_registapp_ll_style">

        <TextView
            style="@style/warp_size15"
            android:text="@string/sure_pwd_str" />

        <EditText
            android:id="@+id/register_psw_edit"
            style="@style/warp_size15"
            android:layout_height="@dimen/dp_40"
            android:layout_marginLeft="@dimen/dp_5"
            android:layout_marginRight="@dimen/dp_5"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/pwd_hint_str"
            android:inputType="text"
            android:textSize="@dimen/sp_13" />

        <ImageView
            android:id="@+id/register_psw_open_close_tv"
            android:layout_width="@dimen/dp_30"
            android:layout_height="@dimen/dp_30"
            android:layout_gravity="center_vertical"
            android:contentDescription="@null"
            android:src="@drawable/pwd_see_hint_bg" />
    </LinearLayout>

    <Button
        android:id="@+id/register_sure_btn"
        android:layout_width="@dimen/dp_100"
        android:layout_height="@dimen/dp_35"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dp_20"
        android:background="@drawable/register_btn_bg"
        android:text="@string/sure_register_btn_str"
        android:textSize="@dimen/sp_13" />

</LinearLayout>